# AI_Reviewer

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/: __init__.py  state.py
src/app/: cli.py  server.py
src/client/: __init__.py  base.py  openrouter.py
src/config/: __init__.py
src/eval/: __init__.py  evaluator.py
src/formatter/: __init__.py  output.py
src/model/: __init__.py
src/preprocess/: __init__.py  parser.py
src/prompt/: __init__.py  manager.py
src/prompt/templates/: comprehensive_eval.yaml  review_point.yaml  review_summary.yaml
src/review/: __init__.py  reviewer.py
tests/: conftest.py  test_cli.py  test_evaluator.py  test_formatter.py  test_parser.py  test_reviewer.py  test_server.py  test_state.py
